syntax = "proto3";

package voteext;

service BlockService {
  rpc GetLatestBlock(GetLatestBlockRequest) returns (BlockResponse);
  rpc GetBlock(GetBlockRequest) returns (BlockResponse);
}

message GetLatestBlockRequest {}

message GetBlockRequest {
  uint64 height = 1;
}

message VoteExt {
  string index = 1;
  uint64 height = 2;
  string validatorAddr = 3;
  string signature = 4;
}

message BlockResponse {
  uint64 height = 1;
  repeated VoteExt voteExts = 2;
}
